PIRATE-3038 Fix layout issue of navigation widget in IE11 #3

--- a/css/widget-navigation.less
+++ b/css/widget-navigation.less
@@ -24,17 +24,7 @@ div.widget.extendednavigation .extendednavigation ul.align-left, div.widget.exte
 		font-size: 0;
 
 		background: lighten(@color-swatch1, 20%);
-
-		&:before {
-			content: "";
-			display: block;
-			height: 2px;
-			background-color: darken(@color-swatch1, 7%);
-			position: absolute;
-			bottom: 0px;
-			left: 0px;
-			right: 0px;
-		}
+		box-shadow: 0px 2px 0px 0px darken(@color-swatch1, 7%);
 
 		@media @tablet {
 			// BS reset
@@ -86,10 +76,8 @@ div.widget.extendednavigation .extendednavigation ul.align-left, div.widget.exte
 		& > ul > li {
 			// Overlaps items' borders
 			position: relative;
-			top: -1px;
 			@media @tablet {
 				margin-left: 0;
-				top: 0;
 			}
 		}
 	}
